# alibabacloud-sdk

./: .gitignore  ChangeLog-Go.txt  README-CN.md  README.md
-20220301/: Teafile  main.tea
aas-20150701/: Teafile  main.tea
abfs-20211230/: Teafile  main.tea
acc-20240402/: Teafile  api-info.json  main.tea
account-crm-20160606/: Teafile  main.tea
accountcenter-20241209/: Teafile  api-info.json  main.tea
acm-20200206/: Teafile  api-info.json  main.tea
actiontrail-20150928/: Teafile  api-info.json  main.tea
actiontrail-20171204/: Teafile  main.tea
actiontrail-20200706/: Teafile  api-info.json  main.tea
adb-20190315/: Teafile  api-info.json  main.tea
adb-20211201/: Teafile  api-info.json  main.tea
adb-inc-20211201/: Teafile  main.tea
adbai-20250812/: Teafile  api-info.json  main.tea
adcp-20220101/: Teafile  api-info.json  main.tea
address-purification-20191118/: Teafile  api-info.json  main.tea
adp-20210720/: Teafile  api-info.json  main.tea
adp-hub-20211125/: Teafile  main.tea
advisor-20180120/: Teafile  api-info.json  main.tea
aegis-20161111/: Teafile  main.tea
aegis-ops-20180828/: Teafile  api-info.json  main.tea
afs-20180112/: Teafile  main.tea
agency-20161118/: Teafile  api-info.json  main.tea
agency-20170718/: Teafile  api-info.json  main.tea
agency-20171030/: Teafile  api-info.json  main.tea
agency-20180328/: Teafile  api-info.json  main.tea
agency-20180701/: Teafile  api-info.json  main.tea
agency-20180703/: Teafile  api-info.json  main.tea
agency-20200324/: Teafile  api-info.json  main.tea
agency-20210425/: Teafile  api-info.json  main.tea
agency-20210609/: Teafile  main.tea
agency-20221216/: Teafile  api-info.json  main.tea
agency-20250227/: Teafile  api-info.json  main.tea
agentexplorer-20260317/: Teafile  api-info.json  main.tea
agentidentity-20250901/: Teafile  api-info.json  main.tea
agentidentitydata-20251127/: Teafile  api-info.json  main.tea
agentloop-20260520/: Teafile  api-info.json  main.tea
agentretailvision-20260506/: Teafile  api-info.json  main.tea
agentrun-20250910/: Teafile  api-info.json  main.tea
agentteams-20260605/: Teafile  main.tea
agraphservice-20210914/: Teafile  main.tea
ahas-20180901/: Teafile  main.tea
ahas-openapi-20190901/: Teafile  main.tea
aiccs-20190715/: Teafile  main.tea
aiccs-20191015/: Teafile  api-info.json  main.tea
aiccs-20230516/: Teafile  api-info.json  main.tea
aicontent-20240611/: Teafile  api-info.json  main.tea
aideepsign-20260511/: Teafile  main.tea
aiearth-engine-20220609/: Teafile  api-info.json  main.tea
aiearth-meteorology-20210928/: Teafile  main.tea
aiearth-meteorology-20220118/: Teafile  main.tea
aiearth-meteorology-20220322/: Teafile  main.tea
aigen-20240111/: Teafile  api-info.json  main.tea
ailab-vision-public-20210709/: Teafile  main.tea
aimath-20241114/: Teafile  api-info.json  main.tea
aimiaobi-20230801/: Teafile  api-info.json  main.tea
aiops-20200806/: Teafile  main.tea
aipodcast-20250228/: Teafile  api-info.json  main.tea
airec-20181012/: Teafile  main.tea
airec-20201126/: Teafile  api-info.json  main.tea
airegistry-20260317/: Teafile  main.tea
airticketopen-20230117/: Teafile  api-info.json  main.tea
aisc-20260101/: Teafile  api-info.json  main.tea
aisearch-20230101/: Teafile  api-info.json  main.tea
aisearchengine-20260417/: Teafile  api-info.json  main.tea
aiworkspace-20210204/: Teafile  api-info.json  main.tea
alb-20200616/: Teafile  api-info.json  main.tea
alicloudproc-20210713/: Teafile  main.tea
alicloudproc-20240104/: Teafile  api-info.json  main.tea
aliding-20230426/: Teafile  api-info.json  main.tea
alidns-20150109/: Teafile  api-info.json  main.tea
aligenie-aiso_1_0/: Teafile  main.tea
aligenie-iap_1.0/: Teafile  main.tea
aligenie-iap_1_0/: Teafile  api-info.json  main.tea
aligenie-ip_1_0/: Teafile  api-info.json  main.tea
aligenie-oauth2_1_0/: Teafile  api-info.json  main.tea
aligenie-ssp_1.0/: Teafile
aligenie-ssp_1_0/: Teafile  api-info.json  main.tea
alikafka-20181015/: Teafile  api-info.json  main.tea
alikafka-20190916/: Teafile  api-info.json  main.tea
alikafkakopilot-20260414/: Teafile  main.tea
alikafkastreaming-20260202/: Teafile  api-info.json  main.tea
alimt-20180807/: Teafile  main.tea
alimt-20181012/: Teafile  api-info.json  main.tea
alimt-20190102/: Teafile  api-info.json  main.tea
alinlp-20200629/: Teafile  api-info.json  main.tea
aliyunape-20210908/: Teafile  main.tea
aliyunauth-20181222/: Teafile  main.tea
aliyuncvc-20191030/: Teafile  main.tea
aliyunvnos-20220314/: Teafile  main.tea
amp-20220221/: Teafile  main.tea
amptest-20201230/: Teafile  main.tea
amqp-20190901/: Teafile  api-info.json  main.tea
openplatform-20191219/cpp/: .gitignore  CMakeLists.txt  README-CN.md  README.md
openplatform-20191219/cpp/cmake/: alibabacloud_open_platform_20191219Config.cmake.in
openplatform-20191219/cpp/include/alibabacloud/: open_platform_20191219.hpp
openplatform-20191219/cpp/src/: open_platform_20191219.cpp
(+23864 files in other folders)
